--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,40 @@
+appnope==0.1.0
+attrs==19.3.0
+backcall==0.2.0
 certifi==2020.4.5.1
 chardet==3.0.4
+decorator==4.4.2
 docopt==0.6.2
 idna==2.9
+importlib-metadata==1.7.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.1
+more-itertools==8.4.0
+numpy==1.19.1
 objectpath==0.6.1
+packaging==20.4
+pandas==1.0.5
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==0.13.1
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+py==1.9.0
 pyaml==20.4.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pytest==5.4.3
+python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 rauth==0.7.3
 requests==2.23.0
+six==1.15.0
+traitlets==4.3.3
 urllib3==1.25.9
+wcwidth==0.2.5
 yahoo-fantasy-api==2.0.1
 yahoo-oauth==1.0
+zipp==3.1.0
